--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,91 +3,78 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{Khan2024FLOAT,
+  author = {Ahmad Faraz Khan and Azal Ahmad Khan and Ahmed M. Abdelmoniem and Samuel Fountain and Ali R. Butt and Ali Anwar},
+  title = {{FLOAT}: Federated Learning Optimizations with Automated Tuning},
+  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys '24)},
+  year = {2024},
+  date = {April 22--25},
+  location = {Athens, Greece},
+  pages = {19},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  doi = {10.1145/3627703.3650081},
+  url = {https://doi.org/10.1145/3627703.3650081}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@INPROCEEDINGS{adaptiveAggregationKhan,
+  author={Khan, Ahmad Faraz and Li, Yuze and Wang, Xinran and Haroon, Sabaat and Ali, Haider and Cheng, Yue and Butt, Ali R. and Anwar, Ali},
+  booktitle={2023 IEEE International Conference on Big Data (BigData)}, 
+  title={Towards cost-effective and resource-aware aggregation at Edge for Federated Learning}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={690-699},
+  keywords={Data centers;Data privacy;Costs;Federated learning;Scalability;Big Data;Data transfer;federated learning;aggregation;edge computing},
+  doi={10.1109/BigData59044.2023.10386691}}
+
+@ARTICLE{securitySurvey,
+  author={Ali, Haider and Chen, Dian and Harrington, Matthew and Salazar, Nathaniel and Ameedi, Mohannad Al and Khan, Ahmad Faraz and Butt, Ali R. and Cho, Jin-Hee},
+  journal={IEEE Access}, 
+  title={A Survey on Attacks and Their Countermeasures in Deep Learning: Applications in Deep Neural Networks, Federated, Transfer, and Deep Reinforcement Learning}, 
+  year={2023},
+  volume={11},
+  number={},
+  pages={120095-120130},
+  keywords={Surveys;Deep learning;Measurement;Artificial neural networks;Transfer learning;Market research;Security;Federated learning;Reinforcement learning;Attacks;defenses;deep neural networks;federated learning;transfer learning;deep reinforcement learning},
+  doi={10.1109/ACCESS.2023.3326410}}
+
+@misc{khan2023pifl,
+      title={PI-FL: Personalized and Incentivized Federated Learning}, 
+      author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Azal Ahmad Khan and Haider Ali and Jie Ding and Ali Butt and Ali Anwar},
+      year={2023},
+      eprint={2304.07514},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
+@INPROCEEDINGS{TIFF,
+  author={Han, Jingoo and Khan, Ahmad Faraz and Zawad, Syed and Anwar, Ali and Angel, Nathalie Baracaldo and Zhou, Yi and Yan, Feng and Butt, Ali R.},
+  booktitle={2022 IEEE 15th International Conference on Cloud Computing (CLOUD)}, 
+  title={TIFF: Tokenized Incentive for Federated Learning}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={407-416},
+  keywords={Training;Cloud computing;Atmospheric measurements;Data integrity;Particle measurements;Collaborative work;Loss measurement;Federated learning;Privacy-aware machine learning;Incentive mechanism;Tokenized incentivization;Distributed deep learning},
+  doi={10.1109/CLOUD55607.2022.00064}}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  selected={true}
-}
+@INPROCEEDINGS{heterogenityJingoo,
+  author={Han, Jingoo and Khan, Ahmad Faraz and Zawad, Syed and Anwar, Ali and Angel, Nathalie Baracaldo and Zhou, Yi and Yan, Feng and Butt, Ali R.},
+  booktitle={2022 IEEE International Conference on Big Data (Big Data)}, 
+  title={Heterogeneity-Aware Adaptive Federated Learning Scheduling}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={911-920},
+  keywords={Performance evaluation;Training;Adaptive scheduling;Adaptation models;Adaptive systems;Federated learning;Big Data;Federated learning;Privacy-aware and secure deep learning;Federated learning scheduling;Resource management and scheduling;Distributed deep learning},
+  doi={10.1109/BigData55660.2022.10020721}}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
+@misc{wang2024incentivized,
+  title={Incentivized Collaborative Learning: Architectural Design and Insights},
+  author={Xinran Wang and Qi Le and Ahmad Faraz Khan and Jie Ding and Ali Anwar},
+  year={2024},
+  url={https://openreview.net/forum?id=9rV9cp7KRH}
+  }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
