Added selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,8 @@
   publisher = {ACM},
   address = {New York, NY, USA},
   doi = {10.1145/3627703.3650081},
-  url = {https://doi.org/10.1145/3627703.3650081}
+  url = {https://doi.org/10.1145/3627703.3650081},
+  selected = {true}
 }
 
 @INPROCEEDINGS{adaptiveAggregationKhan,
@@ -26,7 +27,9 @@
   number={},
   pages={690-699},
   keywords={Data centers;Data privacy;Costs;Federated learning;Scalability;Big Data;Data transfer;federated learning;aggregation;edge computing},
-  doi={10.1109/BigData59044.2023.10386691}}
+  doi={10.1109/BigData59044.2023.10386691},
+  selected = {true}
+}
 
 @ARTICLE{securitySurvey,
   author={Ali, Haider and Chen, Dian and Harrington, Matthew and Salazar, Nathaniel and Ameedi, Mohannad Al and Khan, Ahmad Faraz and Butt, Ali R. and Cho, Jin-Hee},
@@ -37,7 +40,9 @@
   number={},
   pages={120095-120130},
   keywords={Surveys;Deep learning;Measurement;Artificial neural networks;Transfer learning;Market research;Security;Federated learning;Reinforcement learning;Attacks;defenses;deep neural networks;federated learning;transfer learning;deep reinforcement learning},
-  doi={10.1109/ACCESS.2023.3326410}}
+  doi={10.1109/ACCESS.2023.3326410},
+  selected = {true}
+  }
 
 @misc{khan2023pifl,
       title={PI-FL: Personalized and Incentivized Federated Learning}, 
@@ -57,7 +62,8 @@
   number={},
   pages={407-416},
   keywords={Training;Cloud computing;Atmospheric measurements;Data integrity;Particle measurements;Collaborative work;Loss measurement;Federated learning;Privacy-aware machine learning;Incentive mechanism;Tokenized incentivization;Distributed deep learning},
-  doi={10.1109/CLOUD55607.2022.00064}}
+  doi={10.1109/CLOUD55607.2022.00064},
+  }
 
 @INPROCEEDINGS{heterogenityJingoo,
   author={Han, Jingoo and Khan, Ahmad Faraz and Zawad, Syed and Anwar, Ali and Angel, Nathalie Baracaldo and Zhou, Yi and Yan, Feng and Butt, Ali R.},
