Updated cv.yml and resume

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,6 +53,15 @@
       primaryClass={cs.LG}
 }
 
+@misc{wang2023framework,
+      title={A Framework for Incentivized Collaborative Learning}, 
+      author={Xinran Wang and Qi Le and Ahmad Faraz Khan and Jie Ding and Ali Anwar},
+      year={2023},
+      eprint={2305.17052},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
 @INPROCEEDINGS{TIFF,
   author={Han, Jingoo and Khan, Ahmad Faraz and Zawad, Syed and Anwar, Ali and Angel, Nathalie Baracaldo and Zhou, Yi and Yan, Feng and Butt, Ali R.},
   booktitle={2022 IEEE 15th International Conference on Cloud Computing (CLOUD)}, 
