updated my resume

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @string{aps = {American Physical Society,}}
 
-@misc{khan2023pifl,
+@inproceedings{khan2023pifl,
       title={IP-FL: Incentive-driven Personalization in Federated Learning}, 
       author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Zain ul Abdeen and Azal Ahmad Khan and Haider Ali and Ming Jin and Jie Ding and Ali R. Butt and Ali Anwar},
       year={2025},
@@ -12,7 +12,7 @@
       primaryClass={cs.LG}
 }
 
-@INPROCEEDINGS {wang2023framework,
+@inproceedings {wang2024incentivized,
 author = { Wang, Xinran and Le, Qi and Khan, Ahmad Faraz and Ding, Jie and Anwar, Ali },
 booktitle = { 2024 IEEE International Conference on Big Data (BigData) },
 title = {{ ICL: An Incentivized Collaborative Learning Framework }},
@@ -26,9 +26,10 @@ doi = {10.1109/BigData62323.2024.10825643},
 url = {https://doi.ieeecomputersociety.org/10.1109/BigData62323.2024.10825643},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-month =Dec}
+month =Dec,
+selected = {true}}
 
-@INPROCEEDINGS {pFL_techniques,
+@inproceedings {pFL_techniques,
 author = { Khan, Azal Ahmad and Khan, Ahmad Faraz and Ali, Haidar and Anwar, Ali },
 booktitle = { 2024 IEEE International Conference on Big Data (BigData) },
 title = {{ Personalized Federated Learning Techniques: Empirical Analysis }},
@@ -42,9 +43,10 @@ doi = {10.1109/BigData62323.2024.10825575},
 url = {https://doi.ieeecomputersociety.org/10.1109/BigData62323.2024.10825575},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-month =Dec}
+month =Dec,
+selected = {true}}
 
-@INPROCEEDINGS {LLM_sycophancy,
+@inproceedings {LLM_sycophancy,
 author = { Khan, Azal Ahmad and Alam, Sayan and Wang, Xinran and Khan, Ahmad Faraz and Neog, Debanga Raj and Anwar, Ali },
 booktitle = { 2024 IEEE International Conference on Big Data (BigData) },
 title = {{ Mitigating Sycophancy in Large Language Models via Direct Preference Optimization }},
@@ -58,11 +60,12 @@ doi = {10.1109/BigData62323.2024.10825538},
 url = {https://doi.ieeecomputersociety.org/10.1109/BigData62323.2024.10825538},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-month =Dec}
+month =Dec,
+selected = {true}}
 
-@INPROCEEDINGS {dynamicFL,
+@inproceedings {dynamicFL,
 author = { Le, Qi and Diao, Enmao and Wang, Xinran and Khan, Ahmad Faraz and Tarokh, Vahid and Ding, Jie and Anwar, Ali },
-booktitle = { 2024 IEEE International Conference on Big Data (BigData) },
+booktitle = { Best paper in 2024 IEEE International Conference on Big Data (BigData) },
 title = {{ DynamicFL: Federated Learning with Dynamic Communication Resource Allocation }},
 year = {2024},
 volume = {},
@@ -74,7 +77,8 @@ doi = {10.1109/BigData62323.2024.10826074},
 url = {https://doi.ieeecomputersociety.org/10.1109/BigData62323.2024.10826074},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-month =Dec}
+month =Dec,
+selected = {true}}
 
 
 
@@ -103,11 +107,12 @@ month =Dec}
 	abstract = {The rise of antibiotic resistance (AR) is a major global health crisis, exacerbated by the overuse and misuse of antibiotics, leading to the rapid spread of antibiotic resistance genes (ARGs) in bacterial pathogens. This phenomenon poses significant threats to human and animal health, food security, and economic stability. Water bodies, particularly wastewater treatment plants (WWTPs), serve as critical reservoirs for ARGs, creating environments that favor the proliferation of resistant bacteria. Wastewater-based surveillance (WBS) has emerged as a cost-effective strategy for monitoring AR at the population level, providing real-time data to guide public health and policy decisions. Despite advancements in WBS, there are no comprehensive online analytical platforms for continuous environmental AR surveillance. This paper introduces CIWARS, a web server designed for AR analyses of longitudinal metagenomic data. CIWARS offers comprehensive ARG profiling, taxonomic annotation, and anomalous AR risk points detection. We demonstrate its capabilities through an interactive temporal data visualization, showcasing its potential for enhancing AR risk monitoring and guiding effective mitigation strategies. CIWARS is broadly applicable to longitudinal metagenomic data generated from any environment and aims to support global efforts in addressing the AR crisis by providing cyberinfrastructure for continuous AR surveillance. The web server is freely available at https://ciwars.cs.vt.edu/.Competing Interest StatementThe authors have declared no competing interest.},
 	URL = {https://www.biorxiv.org/content/early/2024/11/03/2024.10.30.621203},
 	eprint = {https://www.biorxiv.org/content/early/2024/11/03/2024.10.30.621203.full.pdf},
-	journal = {bioRxiv}
+	journal = {bioRxiv},
+  selected = {true}
 }
 
 
-@INPROCEEDINGS{adaptiveAggregationKhan,
+@inproceedings{adaptiveAggregationKhan,
   author={Khan, Ahmad Faraz and Li, Yuze and Wang, Xinran and Haroon, Sabaat and Ali, Haider and Cheng, Yue and Butt, Ali R. and Anwar, Ali},
   booktitle={2023 IEEE International Conference on Big Data (BigData)}, 
   title={Towards cost-effective and resource-aware aggregation at Edge for Federated Learning}, 
@@ -144,6 +149,7 @@ month =Dec}
   pages={407-416},
   keywords={Training;Cloud computing;Atmospheric measurements;Data integrity;Particle measurements;Collaborative work;Loss measurement;Federated learning;Privacy-aware machine learning;Incentive mechanism;Tokenized incentivization;Distributed deep learning},
   doi={10.1109/CLOUD55607.2022.00064},
+  selected = {true}
   }
 
 @INPROCEEDINGS{heterogenityJingoo,
@@ -155,13 +161,5 @@ month =Dec}
   number={},
   pages={911-920},
   keywords={Performance evaluation;Training;Adaptive scheduling;Adaptation models;Adaptive systems;Federated learning;Big Data;Federated learning;Privacy-aware and secure deep learning;Federated learning scheduling;Resource management and scheduling;Distributed deep learning},
-  doi={10.1109/BigData55660.2022.10020721}}
-
-@misc{wang2024incentivized,
-  title={Incentivized Collaborative Learning: Architectural Design and Insights},
-  author={Xinran Wang and Qi Le and Ahmad Faraz Khan and Jie Ding and Ali Anwar},
-  year={2024},
-  url={https://openreview.net/forum?id=9rV9cp7KRH}
-  }
-
-
+  doi={10.1109/BigData55660.2022.10020721},
+  selected = {true}}
