Updated Selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,14 +3,25 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{anonymous2025flstore,
+title={FLStore: Efficient Federated Learning Storage for non-training workloads},
+author={Ahmad Faraz Khan, Samuel Fountain, Ahmed M. Abdelmoniem, Ali R. Butt, and Ali Anwar},
+booktitle={Eighth Conference on Machine Learning and Systems},
+year={2025},
+url={https://openreview.net/forum?id=OSmHZYq9Ez},
+selected = {true}
+}
+
 @inproceedings{khan2023pifl,
       title={IP-FL: Incentive-driven Personalization in Federated Learning}, 
       author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Zain ul Abdeen and Azal Ahmad Khan and Haider Ali and Ming Jin and Jie Ding and Ali R. Butt and Ali Anwar},
       year={2025},
       eprint={2304.07514},
       archivePrefix={IPDPS},
-      primaryClass={cs.LG}
+      primaryClass={cs.LG},
+      selected = {true}
 }
+
 
 @inproceedings {wang2024incentivized,
 author = { Wang, Xinran and Le, Qi and Khan, Ahmad Faraz and Ding, Jie and Anwar, Ali },
@@ -26,8 +37,7 @@ doi = {10.1109/BigData62323.2024.10825643},
 url = {https://doi.ieeecomputersociety.org/10.1109/BigData62323.2024.10825643},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-month =Dec,
-selected = {true}}
+month =Dec}
 
 @inproceedings {pFL_techniques,
 author = { Khan, Azal Ahmad and Khan, Ahmad Faraz and Ali, Haidar and Anwar, Ali },
@@ -43,8 +53,7 @@ doi = {10.1109/BigData62323.2024.10825575},
 url = {https://doi.ieeecomputersociety.org/10.1109/BigData62323.2024.10825575},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
-month =Dec,
-selected = {true}}
+month =Dec}
 
 @inproceedings {LLM_sycophancy,
 author = { Khan, Azal Ahmad and Alam, Sayan and Wang, Xinran and Khan, Ahmad Faraz and Neog, Debanga Raj and Anwar, Ali },
