--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,21 @@ title={FLStore: Efficient Federated Learning Storage for non-training workloads}
 author={Ahmad Faraz Khan, Samuel Fountain, Ahmed M. Abdelmoniem, Ali R. Butt, and Ali Anwar},
 booktitle={Eighth Conference on Machine Learning and Systems},
 year={2025},
+abstract = {Federated Learning (FL) is an approach for privacy-preserving Machine Learning (ML), enabling model training
+across multiple clients without centralized data collection. With an aggregator server coordinating training,
+aggregating model updates, and storing metadata across rounds. In addition to training, a substantial part of
+FL systems are the non-training workloads such as scheduling, personalization, clustering, debugging, and
+incentivization. Most existing systems rely on the aggregator to handle non-training workloads and use cloud
+services for data storage. This results in high latency and increased costs as non-training workloads rely on large
+volumes of metadata, including weight parameters from client updates, hyperparameters, and aggregated updates
+across rounds, making the situation even worse. We propose FLStore, a serverless framework for efficient FL
+non-training workloads and storage. FLStore unifies the data and compute planes on a serverless cache, enabling
+locality-aware execution via tailored caching policies to reduce latency and costs. Per our evaluations, compared
+to cloud object store based aggregator server FLStore reduces per request average latency by 71% and costs by
+92.45%, with peak improvements of 99.7% and 98.8%, respectively. Compared to an in-memory cloud cache
+based aggregator server, FLStore reduces average latency by 64.6% and costs by 98.83%, with peak improvements
+of 98.8% and 99.6%, respectively. FLStore integrates seamlessly with existing FL frameworks with minimal
+modifications, while also being fault-tolerant and highly scalable.},
 url={https://openreview.net/forum?id=OSmHZYq9Ez},
 selected = {true}
 }
@@ -16,12 +31,50 @@ selected = {true}
       title={IP-FL: Incentive-driven Personalization in Federated Learning}, 
       author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Zain ul Abdeen and Azal Ahmad Khan and Haider Ali and Ming Jin and Jie Ding and Ali R. Butt and Ali Anwar},
       year={2025},
+      abstract = {Federated Learning (FL) is an approach for privacy-preserving
+Machine Learning (ML), enabling model training across multiple
+clients without centralized data collection. Existing incentive
+solutions for traditional Federated Learning (FL) focus on
+individual contributions to a single global objective, neglecting the
+nuances of clustered personalization with multiple cluster-level
+models and the non-monetary incentives such as personalized
+model appeal for clients. In this paper, we first propose to treat
+incentivization and personalization as interrelated challenges and
+solve them with an incentive mechanism that fosters personalized
+learning. Additionally, current methods depend on an aggregator
+for client clustering, which is limited by a lack of access to clients’
+confidential information due to privacy constraints, leading to
+inaccurate clustering. To overcome this, we propose direct client
+involvement, allowing clients to indicate their cluster membership
+preferences based on data distribution and incentive-driven
+feedback. Our approach enhances the personalized model appeal
+for self-aware clients with high-quality data leading to their
+active and consistent participation. Our evaluation demonstrates
+significant improvements in test accuracy (8–45%), personalized
+model appeal (3–38%), and participation rates (31–100%) over
+existing FL models, including those addressing data heterogeneity
+and personalization.},
       eprint={2304.07514},
       archivePrefix={IPDPS},
       primaryClass={cs.LG},
       selected = {true}
 }
 
+@inproceedings{Khan2024FLOAT,
+  author = {Ahmad Faraz Khan and Azal Ahmad Khan and Ahmed M. Abdelmoniem and Samuel Fountain and Ali R. Butt and Ali Anwar},
+  title = {{FLOAT}: Federated Learning Optimizations with Automated Tuning},
+  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys '24)},
+  year = {2024},
+  date = {April 22--25},
+  location = {Athens, Greece},
+  pages = {19},
+  abstract = {Federated Learning (FL) has emerged as a powerful approach that enables collaborative distributed model training without the need for data sharing. However, FL grapples with inherent heterogeneity challenges leading to issues such as stragglers, dropouts, and performance variations. Selection of clients to run an FL instance is crucial, but existing strategies introduce biases and participation issues and do not consider resource efficiency. Communication and training acceleration solutions proposed to increase client participation also fall short due to the dynamic nature of system resources. We address these challenges in this paper by designing FLOAT, a novel framework designed to boost FL client resource awareness. FLOAT optimizes resource utilization dynamically for meeting training deadlines, and mitigates stragglers and dropouts through various optimization techniques; leading to enhanced model convergence and improved performance. FLOAT leverages multi-objective Reinforcement Learning with Human Feedback (RLHF) to automate the selection of the optimization techniques and their configurations, tailoring them to individual client resource conditions. Moreover, FLOAT seamlessly integrates into existing FL systems, maintaining non-intrusiveness and versatility for both asynchronous and synchronous FL settings. As per our evaluations, FLOAT increases accuracy by up to 53%, reduces client dropouts by up to 78×, and improves communication, computation, and memory utilization by up to 81×, 44×, and 20× respectively.},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  doi = {10.1145/3627703.3650081},
+  url = {https://doi.org/10.1145/3627703.3650081},
+  selected = {true}
+}
 
 @inproceedings {wang2024incentivized,
 author = { Wang, Xinran and Le, Qi and Khan, Ahmad Faraz and Ding, Jie and Anwar, Ali },
@@ -91,20 +144,7 @@ selected = {true}}
 
 
 
-@inproceedings{Khan2024FLOAT,
-  author = {Ahmad Faraz Khan and Azal Ahmad Khan and Ahmed M. Abdelmoniem and Samuel Fountain and Ali R. Butt and Ali Anwar},
-  title = {{FLOAT}: Federated Learning Optimizations with Automated Tuning},
-  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys '24)},
-  year = {2024},
-  date = {April 22--25},
-  location = {Athens, Greece},
-  pages = {19},
-  publisher = {ACM},
-  address = {New York, NY, USA},
-  doi = {10.1145/3627703.3650081},
-  url = {https://doi.org/10.1145/3627703.3650081},
-  selected = {true}
-}
+
 
 @article {Emon2024.10.30.621203,
 	author = {Emon, Muhit Islam and Cheung, Yat Fei and Stoll, James and Rumi, Monjura Afrin and Brown, Connor and Choi, Joung Min and Moumi, Nazifa Ahmed and Ahmed, Shafayat and Song, Haoqiu and Sein, Justin and Yao, Shunyu and Khan, Ahmad and Gupta, Suraj and Kulkarni, Rutwik and Butt, Ali and Vikesland, Peter and Pruden, Amy and Zhang, Liqing},
