Updated Selected Publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -127,7 +127,7 @@ selected = {true}}
 
 @inproceedings {dynamicFL,
 author = { Le, Qi and Diao, Enmao and Wang, Xinran and Khan, Ahmad Faraz and Tarokh, Vahid and Ding, Jie and Anwar, Ali },
-booktitle = { Best paper in 2024 IEEE International Conference on Big Data (BigData) },
+booktitle = {2024 IEEE International Conference on Big Data (BigData) *Awarded Best Paper*},
 title = {{ DynamicFL: Federated Learning with Dynamic Communication Resource Allocation }},
 year = {2024},
 volume = {},
@@ -157,7 +157,7 @@ selected = {true}}
 	URL = {https://www.biorxiv.org/content/early/2024/11/03/2024.10.30.621203},
 	eprint = {https://www.biorxiv.org/content/early/2024/11/03/2024.10.30.621203.full.pdf},
 	journal = {bioRxiv},
-  selected = {true}
+  selected = {false}
 }
 
 
@@ -171,7 +171,7 @@ selected = {true}}
   pages={690-699},
   keywords={Data centers;Data privacy;Costs;Federated learning;Scalability;Big Data;Data transfer;federated learning;aggregation;edge computing},
   doi={10.1109/BigData59044.2023.10386691},
-  selected = {true}
+  selected = {false}
 }
 
 @ARTICLE{securitySurvey,
@@ -184,7 +184,7 @@ selected = {true}}
   pages={120095-120130},
   keywords={Surveys;Deep learning;Measurement;Artificial neural networks;Transfer learning;Market research;Security;Federated learning;Reinforcement learning;Attacks;defenses;deep neural networks;federated learning;transfer learning;deep reinforcement learning},
   doi={10.1109/ACCESS.2023.3326410},
-  selected = {true}
+  selected = {false}
   }
 
 
@@ -198,7 +198,7 @@ selected = {true}}
   pages={407-416},
   keywords={Training;Cloud computing;Atmospheric measurements;Data integrity;Particle measurements;Collaborative work;Loss measurement;Federated learning;Privacy-aware machine learning;Incentive mechanism;Tokenized incentivization;Distributed deep learning},
   doi={10.1109/CLOUD55607.2022.00064},
-  selected = {true}
+  selected = {false}
   }
 
 @INPROCEEDINGS{heterogenityJingoo,
@@ -211,4 +211,4 @@ selected = {true}}
   pages={911-920},
   keywords={Performance evaluation;Training;Adaptive scheduling;Adaptation models;Adaptive systems;Federated learning;Big Data;Federated learning;Privacy-aware and secure deep learning;Federated learning scheduling;Resource management and scheduling;Distributed deep learning},
   doi={10.1109/BigData55660.2022.10020721},
-  selected = {true}}
+  selected = {false}}
