--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,24 +5,9 @@
 
 @inproceedings{anonymous2025flstore,
 title={FLStore: Efficient Federated Learning Storage for non-training workloads},
-author={Ahmad Faraz Khan, Samuel Fountain, Ahmed M. Abdelmoniem, Ali R. Butt, and Ali Anwar},
+author={Ahmad Faraz Khan and Samuel Fountain and Ahmed M. Abdelmoniem and Ali R. Butt and Ali Anwar},
 booktitle={Eighth Conference on Machine Learning and Systems},
 year={2025},
-abstract = {Federated Learning (FL) is an approach for privacy-preserving Machine Learning (ML), enabling model training
-across multiple clients without centralized data collection. With an aggregator server coordinating training,
-aggregating model updates, and storing metadata across rounds. In addition to training, a substantial part of
-FL systems are the non-training workloads such as scheduling, personalization, clustering, debugging, and
-incentivization. Most existing systems rely on the aggregator to handle non-training workloads and use cloud
-services for data storage. This results in high latency and increased costs as non-training workloads rely on large
-volumes of metadata, including weight parameters from client updates, hyperparameters, and aggregated updates
-across rounds, making the situation even worse. We propose FLStore, a serverless framework for efficient FL
-non-training workloads and storage. FLStore unifies the data and compute planes on a serverless cache, enabling
-locality-aware execution via tailored caching policies to reduce latency and costs. Per our evaluations, compared
-to cloud object store based aggregator server FLStore reduces per request average latency by 71% and costs by
-92.45%, with peak improvements of 99.7% and 98.8%, respectively. Compared to an in-memory cloud cache
-based aggregator server, FLStore reduces average latency by 64.6% and costs by 98.83%, with peak improvements
-of 98.8% and 99.6%, respectively. FLStore integrates seamlessly with existing FL frameworks with minimal
-modifications, while also being fault-tolerant and highly scalable.},
 url={https://openreview.net/forum?id=OSmHZYq9Ez},
 selected = {true}
 }
@@ -156,8 +141,7 @@ selected = {true}}
 	abstract = {The rise of antibiotic resistance (AR) is a major global health crisis, exacerbated by the overuse and misuse of antibiotics, leading to the rapid spread of antibiotic resistance genes (ARGs) in bacterial pathogens. This phenomenon poses significant threats to human and animal health, food security, and economic stability. Water bodies, particularly wastewater treatment plants (WWTPs), serve as critical reservoirs for ARGs, creating environments that favor the proliferation of resistant bacteria. Wastewater-based surveillance (WBS) has emerged as a cost-effective strategy for monitoring AR at the population level, providing real-time data to guide public health and policy decisions. Despite advancements in WBS, there are no comprehensive online analytical platforms for continuous environmental AR surveillance. This paper introduces CIWARS, a web server designed for AR analyses of longitudinal metagenomic data. CIWARS offers comprehensive ARG profiling, taxonomic annotation, and anomalous AR risk points detection. We demonstrate its capabilities through an interactive temporal data visualization, showcasing its potential for enhancing AR risk monitoring and guiding effective mitigation strategies. CIWARS is broadly applicable to longitudinal metagenomic data generated from any environment and aims to support global efforts in addressing the AR crisis by providing cyberinfrastructure for continuous AR surveillance. The web server is freely available at https://ciwars.cs.vt.edu/.Competing Interest StatementThe authors have declared no competing interest.},
 	URL = {https://www.biorxiv.org/content/early/2024/11/03/2024.10.30.621203},
 	eprint = {https://www.biorxiv.org/content/early/2024/11/03/2024.10.30.621203.full.pdf},
-	journal = {bioRxiv},
-  selected = {false}
+	journal = {bioRxiv}
 }
 
 
@@ -170,8 +154,7 @@ selected = {true}}
   number={},
   pages={690-699},
   keywords={Data centers;Data privacy;Costs;Federated learning;Scalability;Big Data;Data transfer;federated learning;aggregation;edge computing},
-  doi={10.1109/BigData59044.2023.10386691},
-  selected = {false}
+  doi={10.1109/BigData59044.2023.10386691}
 }
 
 @ARTICLE{securitySurvey,
@@ -183,8 +166,7 @@ selected = {true}}
   number={},
   pages={120095-120130},
   keywords={Surveys;Deep learning;Measurement;Artificial neural networks;Transfer learning;Market research;Security;Federated learning;Reinforcement learning;Attacks;defenses;deep neural networks;federated learning;transfer learning;deep reinforcement learning},
-  doi={10.1109/ACCESS.2023.3326410},
-  selected = {false}
+  doi={10.1109/ACCESS.2023.3326410}
   }
 
 
@@ -197,8 +179,7 @@ selected = {true}}
   number={},
   pages={407-416},
   keywords={Training;Cloud computing;Atmospheric measurements;Data integrity;Particle measurements;Collaborative work;Loss measurement;Federated learning;Privacy-aware machine learning;Incentive mechanism;Tokenized incentivization;Distributed deep learning},
-  doi={10.1109/CLOUD55607.2022.00064},
-  selected = {false}
+  doi={10.1109/CLOUD55607.2022.00064}
   }
 
 @INPROCEEDINGS{heterogenityJingoo,
@@ -210,5 +191,4 @@ selected = {true}}
   number={},
   pages={911-920},
   keywords={Performance evaluation;Training;Adaptive scheduling;Adaptation models;Adaptive systems;Federated learning;Big Data;Federated learning;Privacy-aware and secure deep learning;Federated learning scheduling;Resource management and scheduling;Distributed deep learning},
-  doi={10.1109/BigData55660.2022.10020721},
-  selected = {false}}
+  doi={10.1109/BigData55660.2022.10020721}}
