--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@ selected = {true}
 @inproceedings{Khan2024FLOAT,
   author = {Ahmad Faraz Khan and Azal Ahmad Khan and Ahmed M. Abdelmoniem and Samuel Fountain and Ali R. Butt and Ali Anwar},
   title = {{FLOAT}: Federated Learning Optimizations with Automated Tuning},
-  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys '24)},
+  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys 2024)},
   year = {2024},
   date = {April 22--25},
   location = {Athens, Greece},
