--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,20 +13,22 @@ url={https://openreview.net/forum?id=OSmHZYq9Ez},
 selected = {true}
 }
 
-
 @inproceedings{khan2023pifl,
-title={IP-FL: Incentive-driven Personalization in Federated Learning},
-author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Zain ul Abdeen and Azal Ahmad Khan and Haider Ali and Ming Jin and Jie Ding and Ali R. Butt and Ali Anwar},
-abstract = {Federated Learning (FL) is an approach for privacy-preserving Machine Learning (ML), enabling model training across multiple clients without centralized data collection. Existing incentive solutions for traditional Federated Learning (FL) focus on individual contributions to a single global objective, neglecting the nuances of clustered personalization with multiple cluster-level models and the non-monetary incentives such as personalized model appeal for clients. In this paper, we first propose to treat incentivization and personalization as interrelated challenges and solve them with an incentive mechanism that fosters personalized learning. Additionally, current methods depend on an aggregator for client clustering, which is limited by a lack of access to clients’ confidential information due to privacy constraints, leading to inaccurate clustering. To overcome this, we propose direct client involvement, allowing clients to indicate their cluster membership preferences based on data distribution and incentive-driven feedback. Our approach enhances the personalized model appeal for self-aware clients with high-quality data leading to their active and consistent participation. Our evaluation demonstrates significant improvements in test accuracy (8–45%), personalized model appeal (3–38%), and participation rates (31–100%) over existing FL models, including those addressing data heterogeneity and personalization.},
-booktitle={39th IEEE International Parallel & Distributed Processing Symposium (IPDPS 2025)},
-year={2025},
-selected = {true}
+      title={IP-FL: Incentive-driven Personalization in Federated Learning}, 
+      author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Zain ul Abdeen and Azal Ahmad Khan and Haider Ali and Ming Jin and Jie Ding and Ali R. Butt and Ali Anwar},
+      year={2025},
+      abstract = {Federated Learning (FL) is an approach for privacy-preserving Machine Learning (ML), enabling model training across multiple clients without centralized data collection. Existing incentive solutions for traditional Federated Learning (FL) focus on individual contributions to a single global objective, neglecting the nuances of clustered personalization with multiple cluster-level models and the non-monetary incentives such as personalized model appeal for clients. In this paper, we first propose to treat incentivization and personalization as interrelated challenges and solve them with an incentive mechanism that fosters personalized learning. Additionally, current methods depend on an aggregator for client clustering, which is limited by a lack of access to clients’ confidential information due to privacy constraints, leading to inaccurate clustering. To overcome this, we propose direct client involvement, allowing clients to indicate their cluster membership preferences based on data distribution and incentive-driven feedback. Our approach enhances the personalized model appeal for self-aware clients with high-quality data leading to their active and consistent participation. Our evaluation demonstrates significant improvements in test accuracy (8–45%), personalized model appeal (3–38%), and participation rates (31–100%) over existing FL models, including those addressing data heterogeneity and personalization.},
+      eprint={2304.07514},
+      booktitle={39th IEEE International Parallel & Distributed Processing Symposium (IPDPS 2025)},
+      archivePrefix={IPDPS},
+      primaryClass={cs.LG},
+      selected = {true}
 }
 
 @inproceedings{Khan2024FLOAT,
   author = {Ahmad Faraz Khan and Azal Ahmad Khan and Ahmed M. Abdelmoniem and Samuel Fountain and Ali R. Butt and Ali Anwar},
   title = {{FLOAT}: Federated Learning Optimizations with Automated Tuning},
-  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys 2024)},
+  booktitle = {Nineteenth European Conference on Computer Systems (EuroSys '24)},
   year = {2024},
   date = {April 22--25},
   location = {Athens, Greece},
