--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 title={FLStore: Efficient Federated Learning Storage for non-training workloads},
 author={Ahmad Faraz Khan and Samuel Fountain and Ahmed M. Abdelmoniem and Ali R. Butt and Ali Anwar},
 abstract = {Federated Learning (FL) is an approach for privacy-preserving Machine Learning (ML), enabling model training across multiple clients without centralized data collection. With an aggregator server coordinating training, aggregating model updates, and storing metadata across rounds. In addition to training, a substantial part of FL systems are the non-training workloads such as scheduling, personalization, clustering, debugging, and incentivization. Most existing systems rely on the aggregator to handle non-training workloads and use cloud services for data storage. This results in high latency and increased costs as non-training workloads rely on large volumes of metadata, including weight parameters from client updates, hyperparameters, and aggregated updates across rounds, making the situation even worse. We propose FLStore, a serverless framework for efficient FL non-training workloads and storage. FLStore unifies the data and compute planes on a serverless cache, enabling locality-aware execution via tailored caching policies to reduce latency and costs. Per our evaluations, compared to cloud object store based aggregator server FLStore reduces per request average latency by 71% and costs by 92.45%, with peak improvements of 99.7% and 98.8%, respectively. Compared to an in-memory cloud cache based aggregator server, FLStore reduces average latency by 64.6% and costs by 98.83%, with peak improvements of 98.8% and 99.6%, respectively. FLStore integrates seamlessly with existing FL frameworks with minimal modifications, while also being fault-tolerant and highly scalable},
-booktitle={Eighth Conference on Machine Learning and Systems (MLSys 2025)},
+booktitle={Eighth Conference on Machine Learning and Systems (MLSys '25)},
 year={2025},
 url={https://openreview.net/forum?id=OSmHZYq9Ez},
 selected = {true}
@@ -18,7 +18,7 @@ selected = {true}
       author={Ahmad Faraz Khan and Xinran Wang and Qi Le and Zain ul Abdeen and Azal Ahmad Khan and Haider Ali and Ming Jin and Jie Ding and Ali R. Butt and Ali Anwar},
       year={2025},
       abstract = {Federated Learning (FL) is an approach for privacy-preserving Machine Learning (ML), enabling model training across multiple clients without centralized data collection. Existing incentive solutions for traditional Federated Learning (FL) focus on individual contributions to a single global objective, neglecting the nuances of clustered personalization with multiple cluster-level models and the non-monetary incentives such as personalized model appeal for clients. In this paper, we first propose to treat incentivization and personalization as interrelated challenges and solve them with an incentive mechanism that fosters personalized learning. Additionally, current methods depend on an aggregator for client clustering, which is limited by a lack of access to clients’ confidential information due to privacy constraints, leading to inaccurate clustering. To overcome this, we propose direct client involvement, allowing clients to indicate their cluster membership preferences based on data distribution and incentive-driven feedback. Our approach enhances the personalized model appeal for self-aware clients with high-quality data leading to their active and consistent participation. Our evaluation demonstrates significant improvements in test accuracy (8–45%), personalized model appeal (3–38%), and participation rates (31–100%) over existing FL models, including those addressing data heterogeneity and personalization.},
-      booktitle={39th IEEE International Parallel & Distributed Processing Symposium (IPDPS 2025)},
+      booktitle={39th IEEE International Parallel & Distributed Processing Symposium (IPDPS '25)},
       publisher={IEEE},
       selected = {true}
 }
